add evident scientific

--- a/src/main.english.tex
+++ b/src/main.english.tex
@@ -281,7 +281,7 @@
 
 
   \cvitemRightNew
-    {Jan, 2024 – now} % Date
+    {Jan, 2025 – now} % Date
     {Senior Full-stack Developer Level 3} % Job title
     {Evident Scientific} % Company
     {
@@ -300,7 +300,7 @@
 
 
   \cvitemRightNew
-      {Jan, 2020 – now} % Date
+      {Jan, 2020 – Nov, 2024} % Date
       {Full stack developer (and devops) | Tech lead} % Job title
       {difuze inc} % Company
       {
