--- a/src/main.french.tex
+++ b/src/main.french.tex
@@ -278,7 +278,7 @@
 
 
   \cvitemRightNew
-    {Jan, 2024 – now} % Date
+    {Jan, 2025 – aujourd’hui} % Date
     {Senior Full-stack Developer Level 3} % Job title
     {Evident Scientific} % Company
     {
@@ -297,7 +297,7 @@
 
 
   \cvitemRightNew
-  {Janvier 2020 – aujourd’hui} % Date
+  {Janvier 2020 – Nov 2024} % Date
   {Développeur Full Stack (DevOps) | Tech Lead} % Job title
   {difuze inc} % Company
   {
