last version of TEX

--- a/src/main.english.tex
+++ b/src/main.english.tex
@@ -97,7 +97,12 @@
 	% naming according to ISO 3166-1 alpha-2 country codes
 	\graphicspath{{pics/flags/}}
 
+  \vspace{-0.9mm}
+
 	\profilesection{Skills}
+
+  \vspace{-2.2mm}
+
     \chartlabel{Programmatic languages}\\
       \pointskillNinety{}{TypeScript, JavaScript}
       \pointskillNinety{}{HTML (HTML 5), CSS (3D)}
@@ -110,7 +115,8 @@
     \chartlabel{Front-end (web)}\\
       \pointskillNinety{}{Angular (9/10/14/17.1)}
       \pointskillSeventy{}{React, jQuery}
-      \pointskillSeventy{}{RxJS / Observables}
+      \pointskillEighty{}{RxJS / Observables}
+      \pointskillEighty{}{Angular Material / PrimeNG}
       \pointskillSeventy{}{SCSS / SASS, Bootstrap}
       \pointskillSixty{}{Backbone, VueJS}
       \pointskillForty{}{ThreeJS (3D)}
