--- a/src/main.french.tex
+++ b/src/main.french.tex
@@ -97,7 +97,12 @@
 	% naming according to ISO 3166-1 alpha-2 country codes
 	\graphicspath{{pics/flags/}}
 
+  \vspace{-0.9mm}
+
   \profilesection{Compétences}
+
+  \vspace{-2.2mm}
+
   \chartlabel{Langages de programmation}\\
       \pointskillNinety{}{TypeScript, JavaScript}
       \pointskillNinety{}{HTML (HTML 5), CSS (3D)}
