fine-tun FR and EN cv with react

--- a/src/main.english.tex
+++ b/src/main.english.tex
@@ -127,8 +127,7 @@
       \pointskillSixty{}{Microservices (in Python)}
       \pointskillSixty{}{Yii (PHP framework)}
       \pointskillSixty{}{Knex (Postgres, SQLite)}
-      \pointskillThirty{}{Django (Python framework)}
-      \pointskillThirty{}{Elixir (Robust scalability)}
+      \pointskillForty{}{Django (Python framework)}
     \chartlabel{Database}\\
       \pointskillNinety{}{DynamoDB / (MongoDB)}
       \pointskillEighty{}{ElasticSearch}
@@ -136,9 +135,9 @@
       \pointskillSeventy{}{MySQL Workbench, DBeaver}
       \pointskillForty{}{Microsoft SQL Server}
     \chartlabel{Protocol and security}\\
-      \pointskillEighty{}{HTTP / HTTPS / SSL }
-      \pointskillSeventy{}{let's encrypt}
-      \pointskillSeventy{}{Auth0, Auth 2, GraphQL}
+      \pointskillEighty{}{HTTP / HTTPS / SSL}
+      \pointskillEighty{}{REST, GraphQL}
+      \pointskillSixty{}{Auth0, Auth 2, JWT}
 }
 
 
@@ -202,9 +201,9 @@
 
 
 \chartlabel{Agility}\\
-\pointskillEighty{}{Jira (backlog, sprint)}
+\pointskillEighty{}{Jira: backlog, sprint}
 \pointskillEighty{}{Confluence / wiki}
-\pointskillEighty{}{Scrum (grooming, review)}
+\pointskillEighty{}{Scrum: grooming, review}
 
 }
 
@@ -234,7 +233,7 @@
 	\barskillLang{}{\textbf{French} (Mother Tongue)}{100}
 	\barskillLang{}{\textbf{English} (TOEFL)}{92}
 	\barskillLang{}{\textbf{German} (Educational, 2 years)}{35}
-	\barskillLang{}{\textbf{Spanish} (Beginner, Duolingo)}{25}
+	\barskillLang{}{\textbf{Spanish} (Beginner, Duolingo)}{18}
 
 	\profilesection{Honors \& awards}
     \vspace{-1mm} % Adjust the negative space as needed
@@ -296,7 +295,7 @@
       \textbf{Role}: Full-stack borescope's inspection image app (cloud \& desktop)\vspace{4pt}
       \begin{itemize}[itemsep=-1mm, topsep=0pt, leftmargin=8pt]
         \item Frontend: HTML, SCSS, TypeScript, Angular 17+, RxJS, primeNg, Electron\vspace{5pt}
-        \item Backend: C\#, .NET 8, Entity Framework SQL, Azure Blob Storage\vspace{5pt}
+        \item Backend: C\#, .NET 8, JWT, Entity Framework SQL, Azure Blob Storage\vspace{5pt}
         \item Design and develop APIs and microservices as Azure Function App\vspace{5pt}
       \end{itemize}
     }
@@ -342,7 +341,7 @@
         \vspace{0.1pt} % Add space before "Projects"
         \textbf{Projects:}
         \begin{itemize}[itemsep=1mm, topsep=5pt, leftmargin=8pt]
-          \item \textbf{showcase.com}: Old legacy stack based on YII written in PHP, along with scripts in C\# for scheduling tasks like cron jobs
+          \item \textbf{showcase.com}: Old legacy stack based on YII written in PHP, along with scripts in C\# for scheduling tasks like cron jobs. Side project: 15h of React.
           \item \textbf{difuzego.com}: New stack based on \textit{modern} AWS features written in TS.
         \end{itemize}
 
@@ -364,7 +363,7 @@
 
         \textbf{Architecture}: Monolithic, no microservice. Data model shared between UI \& API. Common gitlab repository for front-end and back-end.\vspace{5pt}
 
-        \textbf{CI/CD}: pipelines over gitlab including linter, prettier, unitary tests, builder, ECR deployer, triggering Elastic Beanstalk's back-end environment update
+        \textbf{CI/CD}: pipelines over gitlab including linter, prettier, unit tests + TDD, builder, ECR deployer, triggering Elastic Beanstalk's back-end environment update
       }
     {Montreal} % Location on the second line, aligned to the right
 \end{cvtableNew}
@@ -412,13 +411,13 @@
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Role}: Developed and maintained WebApp interfaces and back-end for Canal+ digital TV receivers, reaching millions on TNT, SATELLITE, and IPTV.\par
       \vspace{4pt}
-      \textbf{Front-End:} Engineered HTML, JS, CSS solutions, managed by Webpack, executed by Qt/WebKit on Linux. Used ES2015 standards with Babel, grunt\par
+      \textbf{Front-End:} Developed HTML/CSS/JS UIs using ES2015 (Babel, Grunt), bundled with Webpack and rendered via Qt/WebKit on Linux; 10 h of React.\par
       \vspace{4pt}
       \textbf{Server-Side:} Supported by a Python UWSGI server hosting the WebApp and managing routing through DBUS for system interactions.\par
       \vspace{4pt}
       \textbf{Libraries and Frameworks:} Transitioned from BACKBONE to ANGULAR for enhanced MVC architecture; used LODASH for advanced data manipulation, EASELJS for interactive canvas operations, and EJS for templating.\par
       \vspace{4pt}
-      \textbf{Agile and Testing:} Conducted MOCHA, SPY, and SINON unit tests and POSTMAN API testing. Managed agile sprints, tracked tasks on Jira, documented in Confluence.\par
+      \textbf{Agile and Testing:} Conducted unit tests with Mocha, Spy, and Sinon and API testing with Postman; managed agile sprints, tracked tasks in Jira, and documented outcomes in Confluence.\par
       \vspace{4pt}
       \textbf{Deployment:} Successfully deployed to 400,000 TNT receivers and subsequently expanded to over 2 million SAT subscribers globally.\par
       \vspace{4pt}
