--- a/src/main.french.tex
+++ b/src/main.french.tex
@@ -127,8 +127,7 @@
       \pointskillSixty{}{Microservices (en Python)}
       \pointskillSixty{}{Yii (PHP framework)}
       \pointskillSixty{}{Knex (Postgres, SQLite)}
-      \pointskillThirty{}{Django (Python framework)}
-      \pointskillThirty{}{Elixir (Robust scalability)}
+      \pointskillForty{}{Django (Python framework)}
       \chartlabel{Bases de données}\\
       \pointskillNinety{}{DynamoDB / (MongoDB)}
       \pointskillEighty{}{ElasticSearch}
@@ -137,8 +136,8 @@
       \pointskillForty{}{Microsoft SQL Server}
     \chartlabel{Protocoles et sécurité}\\
       \pointskillEighty{}{HTTP / HTTPS / SSL}
-      \pointskillSeventy{}{Let's Encrypt}
-      \pointskillSeventy{}{Auth0, Auth 2, GraphQL}
+      \pointskillEighty{}{REST, GraphQL}
+      \pointskillSixty{}{Auth0, Auth 2, JWT}
 }
 
 
@@ -199,9 +198,9 @@
 \pointskillSeventy{}{Vim / Vi}
 
 \chartlabel{Méthodologies agiles}\\
-\pointskillEighty{}{Jira (backlog, sprint)}
+\pointskillEighty{}{Jira: backlog, sprint}
 \pointskillEighty{}{Confluence / Wiki}
-\pointskillEighty{}{Scrum (grooming, review)}
+\pointskillEighty{}{Scrum, grooming, review}
 
 }
 
@@ -231,7 +230,7 @@
 \barskillLang{}{\textbf{Français} (langue maternelle)}{100}
 \barskillLang{}{\textbf{Anglais} (certifié TOEFL)}{92}
 \barskillLang{}{\textbf{Allemand} (scolaire, 2 ans)}{35}
-\barskillLang{}{\textbf{Espagnol} (débutant, Duolingo)}{25}
+\barskillLang{}{\textbf{Espagnol} (débutant, Duolingo)}{18}
 
 \profilesection{Distinctions}
 \vspace{-1mm} % Ajuster l'espacement négatif si nécessaire
@@ -292,7 +291,7 @@
       \textbf{Role}: Application full-stack (cloud et desktop) d’inspections par boroscope\vspace{4pt}
       \begin{itemize}[itemsep=-1mm, topsep=0pt, leftmargin=8pt]
         \item Frontend: HTML, SCSS, TypeScript, Angular 17+, RxJS, primeNg, Electron\vspace{5pt}
-        \item Backend: C\#, .NET 8, Entity Framework SQL, Azure Blob Storage\vspace{5pt}
+        \item Backend: C\#, .NET 8, JWT, Entity Framework SQL, Azure Blob Storage\vspace{5pt}
         \item Design and develop APIs and microservices as Azure Function App\vspace{5pt}
       \end{itemize}
     }
@@ -338,7 +337,7 @@
         \vspace{0.1pt} % Add space before "Projects"
         \textbf{Projets:}
         \begin{itemize}[itemsep=1mm, topsep=5pt, leftmargin=8pt]
-          \item \textbf{showcase.com}: Ancienne pile YII en PHP, avec scripts C\# pour automatisation (cron jobs).
+          \item \textbf{showcase.com}: Ancienne pile YII en PHP, avec scripts C\# pour automatisation (cron jobs). Projet connexe en React: 15h
           \item \textbf{difuzego.com}: Nouvelle pile basée sur des services AWS, écrite en TS.
         \end{itemize}
 
@@ -360,7 +359,7 @@
 
         \textbf{Architecture}: Architecture monolithique, modèle de données partagé UI/API, dépôt GitLab unique pour front et back.\vspace{5pt}
 
-        \textbf{CI/CD}: Architecture monolithique, sans microservices. Modèle de données partagé entre UI et API. Dépôt GitLab commun pour front-end et back-end.
+        \textbf{CI/CD}: Pipeline GitLab intègrant linter, Prettier, tests unitaires en TDD, étape de build, déploiement -> ECR, déclenche la MAJ du backend sur Elastic Beanstalk.
       }
     {Montreal} % Location on the second line, aligned to the right
 \end{cvtableNew}
@@ -408,7 +407,7 @@
       \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Rôle}: Développement et maintenance WebApp et back-end pour les décodeurs Canal+ (TNT, satellite, IPTV), millions d’utilisateurs.\par
       \vspace{4pt}
-      \textbf{Front-End:} Conception de solutions HTML, JS, CSS gérées par Webpack, exécutées via Qt/WebKit sous Linux. Utilisation des standards ES2015 avec Babel et Grunt.\par
+      \textbf{Front-End:} développement d’interfaces HTML/CSS/JS en ES2015 (Babel, Grunt), packagées avec Webpack et exécutées via Qt/WebKit sous Linux; 10 h de React.\par
       \vspace{4pt}
       \textbf{Côté serveur:} support assuré par un serveur Python UWSGI hébergeant la WebApp et gérant le routage via DBUS pour les interactions système.\par
       \vspace{4pt}
